--- a/doan/src/main/resources/application.properties
+++ b/doan/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=doan
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+
+# Error handling configuration
+server.error.whitelabel.enabled=false
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on_param
+
+spring.security.user.name=admin
+spring.security.user.password=123
