--- a/doan/src/main/resources/application.properties
+++ b/doan/src/main/resources/application.properties
@@ -11,3 +11,9 @@ server.error.include-stacktrace=on_param
 
 spring.security.user.name=admin
 spring.security.user.password=123
+
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_stu
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
